working on media queries-not working

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,3 +42,8 @@ p.p1 {
     border: 2px solid #78c2ad;
   }
   
+  @media screen and (max-width: 580px) {
+    .imageNav_plot {
+      display: block;
+      float: none;  }
+  }
