--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,26 @@
+/* html for whole page */
+html{
+  background-color: #eceeef;  
+}
+
+.main_container{
+  background-color: #eceeef;
+}
+
+/* summary_box */
+.summary_box {
+  position: relative;
+  background: white;
+  padding: 75px;
+  margin: 25px; 
+}
+
+/* #summ_pic {
+  position: relative;
+  width: 255px;
+  height: 225px; 
+  padding: 15px;
+} */
 
 /* Add color to navBar "Latitude" */
 /* .navbar-brand { 
@@ -31,9 +54,11 @@ hr.style1{
 }
 
 p.p1 {
-    margin-top: 25px;
+    margin: 25px;
     line-height: 2;
     font-size: 18px ;  
+    padding: 5px;
+
 }  
 
 
@@ -43,16 +68,18 @@ p.p1 {
 /* Sets up grid for images in Vis */
 
 .imageNav_plot {
-    width: 255px;
-    height: 225px;
+    position: relative;
+    width: 100%;
+    padding: 5px;
+    
   }
   
-  .imageNav_plot:hover {
+.imageNav_plot:hover {
     opacity: 0.6; 
-  }
+}
   
-  .imageNav_plot.active {
+.imageNav_plot.active {
     border: 4px solid #78c2ad;
-  }
+}
   
   
